@@ -1,8 +1,8 @@
-; -*- mode: lisp; package: user -*-
+; -*- mode: lisp; package: json.ui; encoding: shift_jis -*-
 
-;;; json.l
+;;; json/ui/syntex-checker.l
 ;;
-;; Copyright (c) 2010 MIYAMUKO Katsuyuki.
+;; Copyright (c) 2011 MIYAMUKO Katsuyuki.
 ;;
 ;; Permission is hereby granted, free of charge, to any person obtaining
 ;; a copy of this software and associated documentation files (the
@@ -25,14 +25,36 @@
 
 ;;; Code:
 
-(in-package :user)
+(eval-when (:compile-toplevel :load-toplevel :execute)
+  (require "json/package")
+  (require "json/decoder")
+  )
 
-(require "json/version")
-(require "json/encoder")
-(require "json/decoder")
-(require "json/accessor")
-(require "json/ui")
+(in-package :json.ui)
 
-(provide "json")
+(export '(json-syntax-check-buffer
+          json-syntax-check-region
+          ))
+
+(defun json-syntax-check-buffer ()
+  (interactive)
+  (json-syntax-check-region (point-min) (point-max)))
+
+(defun json-syntax-check-region (s e)
+  (interactive "r")
+  (if (< e s) (rotatef s e))
+  (handler-case
+      (progn
+        (json-decode (buffer-substring s e))
+        (popup-string "JSON syntax OK!" (point)))
+    (json-parse-error (c)
+      (goto-char s)
+      (forward-line (- (json-parse-error-linenum c) 1))
+      (goto-column (json-parse-error-column c))
+      (popup-string (format nil "~A" c) (point))
+      )))
+
+
+(provide "json/ui/syntex-checker")
 
 ;;; End
